--- a/Question1ShopifyChallenge.ipynb
+++ b/Question1ShopifyChallenge.ipynb
@@ -97,7 +97,7 @@
         "Based on the graph above, we can see that stores 42 and 78 are most likely causing outliers through unusually high order values, therefore significantly increasing the raw mean value to 3145.128, making it an unreliable metric for the average order value (AOV). In order to get a more reliable estimate of the AOV, a better way to evaluate this data would be to use the median *order_amount* value instead, as it wouldn't be affected as much by an unusually large or small observation. Another would be to remove the outliers, and recalculate the mean. \n",
         "\n",
         "**b) / c)**\n",
-        "Below, the \"Median\", and \"Mean without Outliers\" were both calculated, with values of 284.0 and 293.7153735336489 respectively. These are much more reliable estimates of AOV, and are significantly different from the orignal AOV of 3145.128. The outlier removal on the order amounts were done using IQR. \n"
+        "Below, the \"Median\", and \"Mean without Outliers\" were both calculated, with values of 284.0 and 293.7153735336489 respectively. These are much more reliable estimates of AOV, and are significantly different from the orignal AOV of 3145.128. The outlier removal on the order amounts was done using IQR. \n"
       ],
       "metadata": {
         "id": "nFt4MbHw_GBD"
